<resources>
    <string name="app_name">来出书</string>
    <string name="guide3_button">立刻体验</string>
    <string name="usernameHint">请输入手机号码</string>
    <string name="passworldHint">请输入密码</string>
    <string name="writecodeHint">请输入验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码?</string>
    <string name="trilateral">使用第三方帐号登录</string>
    <string name="errMsg1">网络连接失败，请检查网络设置</string>
    <string name="errMsg2">账户已在其他设备上登录，系统将返回重新登陆</string>
    <string name="errMsg3">账号不存在</string>
    <string name="errMsg4">账号或密码错误</string>
    <string name="errMsg5">系统内部错误</string>
    <string name="phoneHint">手机号码</string>
    <string name="codeHint">验证码</string>
    <string name="newpwdHint">新密码</string>
    <string name="repwdHint">确认密码</string>
    <string name="getcode">获取验证码</string>
    <string name="finish">完成</string>
    <string name="regist1">勾选代表您已经同意来出书的</string>
    <string name="newbook">勾选代表您已经同意来出书的</string>
    <string name="beservice">勾选代表您已经同意来出书成为</string>
    <string name="regist2">用户协议</string>
    <string name="copyright">著作权保护声明</string>
    <string name="service_copyright">服务者协议</string>
    <string name="next">下一步</string>
    <string name="select">请选择</string>
    <string name="fillin">请填写</string>
    <string name="name">昵称</string>
    <string name="sex">性别</string>
    <string name="address">地址</string>
    <string name="phone">手机号</string>
    <string name="pwd">密码</string>
    <string name="msg">请让我们对您有个初步的了解，以便给您更好的服务</string>
    <string name="repwd">确认密码</string>
    <!-- 服务条款 -->
    <string name="service_terms">
        用户在本APP的任何行为必须遵循：\n(1) 传输资料时必须符合中国有关法规。\n(2) 使用信息服务不作非法用途和不道德行为。\n(3) 不干扰或混乱网络服务。\n(4) 遵守所有使用服务的网络协议、规定、程序和惯例。用户的行为准则是以因特网法规，政策、程序和惯例为根据的。</string>
    <string name="search">输入作者、书名、出版社</string>
    <string name="all">全部</string>
    <string name="activity">活动</string>
    <string name="citywide">同城</string>
    <string name="ranking">排行</string>
    <string name="join_activity">参加活动</string>
    <string name="reader">读者评论</string>
    <string name="dresser">大咖评论</string>
    <string name="like">喜欢本书的人也喜欢</string>
    <string name="author">作者</string>
    <string name="reward">打赏</string>
    <string name="lookup_allcomment">查看全部评论</string>
    <string name="select_book">选择参加活动书籍</string>
    <string name="marking">轻触打分</string>
    <string name="comment_hint">请留下你对本书的想法及感受</string>
    <string name="comment_hint_edit">请留下你对本编辑者的想法及感受</string>
    <string name="comment_hint_class">请留下你对本课程的想法及感受</string>
    <string name="comment_he_hint">回复TA</string>
    <string name="comment">轻触评论</string>
    <string name="reward_dialog">感谢你对作者的支持</string>
    <string name="permission_dialog">设置阅读权限</string>
    <string name="sign_state_dialog">选择出版社及编辑</string>
    <string name="add_newbook">点击创建新书</string>
    <string name="draft">编辑目录</string>
    <string name="material">编辑素材</string>
    <string name="submission">投稿</string>
    <string name="delete">删除</string>
    <string name="publishl">发表</string>
    <string name="bookname">书 名 ：</string>
    <string name="category">分 类 ：</string>
    <string name="cover">封 面 ：</string>
    <string name="permission">阅读权限 ：</string>
    <string name="brief">简 介 ：</string>
    <string name="brief2">简 介</string>
    <string name="draftname">目录名称</string>
    <string name="draftcontent">目录内容</string>
    <string name="material_category">素材文件夹</string>
    <string name="advice_content">请在这儿写下你对来出书的意见和建议,我们将会在第一时间解决您的问题,如果你的意见或者建议被我们采纳,我们将会联系你送出我们的礼物.</string>
    <string name="empty_string"></string>
    <string name="agreementcontent">欢迎申请注册“来出书”图书出版平台用户。此注册协议为用户（您）与“来出书”图书出版平台（以下简称平台）关于使用平台出版服务、 推广服务、图书购买服务等达成的有关规定双方权利义务的协议。用户进入注册程序并勾选“我同意“来出书”服务条款“， 该注册协议即发生法律效力，意味着用户已经完全知悉该注册协议的全部内容，充分了解该内容的全部指向，并自愿接受并遵守该协议约定。 平台亦将严格遵循本协议条款，为用户提供相关服务。平台发布的其他政策、规则等亦属于本协议组成部分。\n 特别提示：注册用户应仔细阅读本协议，关于限制条款，本协议已做特殊标示。 如有疑问，请停止注册并致电平台客服热线，平台工作人员会做详细说明。一经注册，即意味着用户自愿接受本协议约束。\n 一、注册ID管理规则\n 1、不得使用以下注册名：\n （1）、党和国家领导人及其他社会知名人士之真实姓名、字、号、艺名、笔名等；\n （2）、国家机构或其他机构之名称；\n （3）、不文明、不健康之名字；\n （4）、易产生歧义、引起他人误解之名字；\n （5）、图形、符号名字；\n （6）、其他违反国家相关法律法规规定或者违背公序良俗之名字\n 2、为了更好地体验平台服务及接受平台合规性监管，用户注册时应当提供详实的个人资料并及时更新，因虚假或者滞后的个人资料造成的损失由用户自行承担。\n 3、用户应当妥善保管平台账号及密码，平台账号仅供用户个人使用，不得外借或者以其他形式许可他人使用，因用户保管不当、私自许可他人使用等行为造成的损失由用户自行承担。使用者成功登陆平台后的处分行为即将被平台认定为该注册用户的意思表示行为。\n 4、对于不符合上述注册规定及相关法律规定的用户，平台保留删除该用户账户的权利，账户删除的后果由用户自行承担。\n 二、平台用户行为规则\n 1、用户在使用平台服务时，必须严格遵守《中华人民共和国著作权法》、《中华人民共和国著作权法实施条例》、《信息网络传播权保护条例》、《互联网信息服务管理办法》、《互联网电子公告服务管理规定》等相关法律法规规章的规定；\n 2、用户对其上传平台或者在平台发表内容承担法律责任，下述内容严禁在平台出现，一经发现，平台将立即采取删除、要求用户修改等强制措施并保留删除用户账号的权利：\n （1）、违反宪法确定的基本原则的；\n （2）、危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；\n （3）、损害国家荣誉和利益的；\n （4）、煽动民族仇恨、民族歧视，破坏民族团结的；\n （5）、破坏国家宗教政策，宣扬邪教和封建迷信的；\n （6）、散布谣言，扰乱社会秩序，破坏社会稳定的；\n （7）、散布淫秽、色情、赌博、暴力、恐怖或者教唆犯罪的；\n （8）、侮辱或者诽谤他人，发表人身攻击言论，侵害他人合法权益的；\n （9）、煽动非法集会、结社、游行、静坐、示威、聚众扰乱社会秩序的；\n （10）、以非法民间组织名义活动的；\n （11）、发表对于政府和法律进行破坏言论的；\n （12）、用发帖机、灌水机等工具软件恶意灌水的；\n （13）、含有法律、行政法规禁止的其他内容的；\n 三、用户个人信息保护\n 1、保护用户隐私是平台的基本政策， 平台保证不对外公开或向第三方提供用户的注册资料及用户在使用平台服务时存储在平台上的非公开内容， 下列情况除外：\n （1） 事先获得用户的明确授权而公开；\n （2） 根据相关法律规定，或应行政、司法机关要求向该机关或第三人公开；\n （3） 为了解决用户与权利通知人权属、侵权纠纷向权利通知人公开；\n （4） 为维护社会公众利益而公开；\n （5） 为维护平台合法权益而公开。\n （6） 其他需要公开或者提供用户个人信息及相关内容的情形。\n 2、平台与第三方合作向用户提供网络服务的，如该第三方同意承担与平台同等的保护用户个人信息责任的， 平台有权将用户的注册资料等提供给该第三方。\n 3、在不透露单个用户个人信息及相关资料的前提下，平台有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。\n 四、平台版权声明\n 1、平台提供的网络服务中包含的一切内容,包括但不限于文字、图片、图形、音频和/或视频资料、版式设计、商标、域名、软件、 程序等均受《中华人民共和国著作权法》等法律法规及相关国际条约的保护，相应权利由平台及/或相关权利人所有， 未经权利人书面授权许可，用户不得将本平台上述任一内容用于商业目的，亦不得转载、链接、复制、传播、修改等， 或将之在非本平台服务器上做镜像，平台保留追究上述未授权行为法律责任的权利。\n 2. 平台为提供网络服务而使用的任何软件（包括但不限于软件中所含的任何图象、照片、动画、录像、录音、音乐、文字和附加程序、随附的帮助材料） 的一切权利均属于该软件的著作权人， 未经该软件的著作权人许可，用户不得对该软件进行反向工程（reverse engineer）、反向编译（decompile）或反汇编（disassemble）等。\n 五、免责条款\n 1、因不可抗力（如自然灾害、政府行为、罢工、暴乱、通讯及其他设备故障、黑客攻击等）或其他平台不能预见、控制的情况造成平台服务中断而使用户遭受损失的，平台不承担责任； 2、用户在使用平台过程中，因违反相关法律法规规定及本协议相关规定，而遭受损失的，平台不承担责任；\n 3、为了能够给用户提供更加高效快捷的服务，平台将不定期对网站及服务器进行改版、升级、维护等，该行为有可能导致网站服务中断，对此中断平台不承担责任；\n 4、对于平台合作网站、链接网站提供的网络服务平台不承担责任；\n 5、对于因病毒、系统缺陷、人为操作计算机系统、电话线、硬件、软件、程序出错或其它由于使用平台而引起的计算机传输或网络连接错误、失败或延迟造成的损害，平台不承担责任 。\n 六、法律适用及管辖\n 1、本协议订立、变更、履行、解释及纠纷解决适用中华人民共和国法律（大陆地区）并由中华人民共和国法院管辖；\n 2、如出现纠纷，双方协商解决，协商不成，双方均有权向北京市海淀区人民法院提起诉讼；\n 3、本协议与法律法规不符的，以法律法规为准。\n 七、其他\n 1、平台各单项服务的具体使用规则亦为本协议组成部分（如“来出书”图书出版平台我的钱包服务协议），用户在使用相关服务前应仔细阅读并严格遵守。如有问题，用户享有要求平台对相关规则作出说明的权利；如不同意，请勿使用该单项服务；一旦使用，即被认为用户同意接受该规则约束；\n 2、平台将根据互联网的发展和相关法律、法规、政策等的变动对本协议条款进行修正、更新或发布新规则、政策等，本协议变动情况将以网站公告形式提示用户，用户应当仔细阅读并严格遵守。如有问题，用户享有要求平台对相关规则作出说明的权利；如不同意，请勿使用平台服务；一旦使用，即被认为用户同意接受该规则约束。\n 3、本协议标题仅为区分、提示使用，不具有其他意义。\n 4、本平台归知识产权出版社有限责任公司所有，本合同项下平台的权利义务由知识产权出版社有限责任公司承担。\n</string>
    <string name="agreementcontent2">“来出书”图书出版平台（以下简称平台）一贯高度重视知识产权保护并严格遵守执行《中华人民共和国著作权法》、 《中华人民共和国著作权法实施条例》等相关法律法规规定。重视正版，打击盗版。 根据相关法律规定及平台版权保护精神， 平台制定了旨在保护权利人合法权益的措施。 当著作权人和/或其他权利人（以下统称“权利人”）发现本平台的内容侵犯其合法权利时， 权利人可向平台发出“权利通知”， 平台将根据相关法律法规等规范性文件的规定采取相应措施， 包括但不限于删除相关涉嫌侵权内容或断开相关链接等。\n “来出书”图书出版平台特此声明：凡平台接到符合下述条件的“权利通知”，则该“权利通知”所涉作品均将被视为权属不明或权属瑕疵作品， 平台有权应“权利通知”人申请采取包括但不限于删除该作品或断开相关链接等措施，该措施后果由“权利通知”人及被申请人承担， 被申请人有权提交“反通知”维护其权益。 具体措施和步骤如下：\n一、权利通知\n任何个人或单位如果同时符合以下两个条件：\n（1）是某一作品的著作权人和/或依法可以行使著作权的权利人；\n（2）认为平台提供的内容侵犯了上述作品的著作权。\n务请上述个人或单位以邮寄权利通知的形式向平台提交异议。\n请注意：如果权利通知的陈述失实，权利通知人将承担由此造成的全部法律责任（包括但不限于赔偿平台、实际权利人的全部损失及合理费用）。\n如果上述个人或单位不确定平台的相关内容是否侵犯其合法权益，平台建议该个人或单位首先咨询专业人士。\n为有效处理上述个人或单位的权利通知，通知书请使用以下格式（包括各条款的序号）：\n1. 请提供详实的个人信息，包括姓名、身份证或护照复印件（对自然人）、单位登记证明复印件（对单位）、通信地址、电话号码、传真和电子邮件。\n2. 请完整、准确地指明涉嫌侵权作品的名称和登载该作品的网页地址。\n3. 请提供构成侵权的初步证明材料，谨此提示如下材料可能会构成初步证明：\n  a. 对涉嫌侵权作品的初步证明材料（包括且不限于权利人对涉嫌侵权内容拥有著作权和/或依法可以行使著作权的权属证明）。\n  b. 对侵权事实的举证。\n4. 权利人对通知书的真实性声明：权利人保证其提交的相关材料真实有效，因权利人提交虚假材料等原因使“来出书”图书出版平台及被申请人遭受损失的，该损失由权利人承担。\n5. 权利通知应由权利人签名或加盖公章。\n请您把以上资料和联络方式书面发往以下地址：\n北京市海淀区西外太平庄55号 图书出版平台收\n邮编：100081\n二、反通知\n\n平台根据前述通知采取相关措施的，被申请人可以提交反通知。 反通知发出后，平台可以恢复被删除内容， 且依法对该恢复行为不承担法律责任，该恢复措施仅以一次为限。 平台保留向权利通知人及反通知人披露对方个人信息的权利。\n务请您以邮寄反通知书的形式向平台提出异议。\n请注意：如果“反通知”陈述失实，反通知人将承担对由此造成的全部法律责任（包括但不限于赔偿平台、实际权利人的全部损失及合理费用）。 如反通知人不确定其提供的内容是否侵犯了他人的权利，平台建议反通知人首先咨询专业人士。\n为有效处理反通知，通知书请使用以下格式（包括各条款的序号）：\n1. 请提供详实的个人信息，包括姓名、身份证或护照复印件（对自然人）、单位登记证明复印件（对单位）、通信地址、电话号码、传真和电子邮件。\n2. 请完整、准确地指明涉嫌侵权作品的名称和登载该作品的网页地址。\n3. 请提供相关内容不构成侵权的初步证明材料，谨此提示如下材料可能会构成初步证明：\n  a. 对涉嫌侵权作品的初步证明材料（包括且不限于反通知人对涉嫌侵权内容拥有著作权和/或依法可以行使著作权的权属证明）。\n  b. 对权利通知人所列侵权事实的抗辩。\n4. 反通知人对通知书的真实性声明：反通知人保证其提交的相关材料真实有效，因反通知人提交虚假材料等原因使“来出书”图书出版平台及申请人遭受损失的，该损失由反通知人承担。\n5. 反通知应由反通知人签名或加盖公章。\n请您把以上资料和联络方式书面发往以下地址：\n北京市海淀区西外太平庄55号 图书出版平台收\n邮编：100081</string>
    <string name="app_introduce_details">"    "“来出书”图书自助出版平台(www.laichushu.com)借助互联网思维及现代信息技术,深度整合UGC(个人创作)+PGC(专业创作)+OGC(职务创作)综合模式下内容生产、交互及发布通道，着力打造国内第一个图书自助出版的社交服务平台及基于图书出版的IP产业链生态圈，做内容原创者的出版经纪人和IP合伙人。\n "      ""来出书"奉行"为更多的人实现出书梦想"的宗旨,自2014年3月上线以来，集聚了大量用户，为数百人实现了出书梦想。"来出书"平台的出版新模式获得了社会各界广泛关注和好评。2014年9月中央电视台《朝闻天下》栏目专门报道了"来出书";"来出书"平台连续获得了"新闻出版产业示范项目"、2014-2015年度数字出版优秀品牌"、"全国新闻出版业优秀互联网+创新项目奖"等荣誉;以"来出书"为前端的全流程数字复合出版平台，获得了财政部文资办资金资助和北京市文创基金的奖励。\n</string>
    <string name="create_group">创建小组</string>
    <string name="find_join_group">加入的小组</string>
    <string name="recomment_group">推荐小组</string>
    <string name="recommend">推荐</string>
    <!-- 播放器 -->
    <string name="download">离线下载</string>
    <string name="play">播放</string>
    <string name="upload_video_info">视频信息</string>
    <string name="download_list">离线列表</string>
    <string name="screensize">画面尺寸</string>
    <string name="definition">清晰度</string>
    <string name="subtitle">字幕</string>
    <string name="speed">倍速</string>
    <string name="account_info">账户信息</string>


    <string name="errcode_success">您已充值成功!</string>
    <string name="errcode_cancel">充值被取消!</string>
    <string name="errcode_deny">充值被拒绝!</string>
    <string name="errcode_unsupported">充值失败,不支持的错误!</string>
    <string name="errcode_unknown">充值失败,未知的错误!</string>
    <!-- cc 直播 -->
    <string name="errMsg_empty">没有更多数据!</string>
    <string name="errMsg_data_exception">数据加载异常!</string>
    <string name="errMsg_networks">网络连接失败!</string>
    <string name="cm_not_start">主播未开启连麦功能</string>
    <string name="cm_applying">连麦申请中</string>

    <string name="cm_disconnect_video">挂断视频连麦</string>

    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="pref_speakerphone_title">Speakerphone.</string>
    <string name="pref_speakerphone_dlg">Speakerphone.</string>
    <string name="pref_speakerphone_default">auto</string>


    <string name="errMsg_empty_comment">暂无评论!</string>
    <string name="errMsg_empty_workList">暂无内容!</string>
</resources>
