<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/item_distance"/>
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/search"
        android:layout_height="50dp">
        <RadioButton
            android:checked="true"
            android:id="@+id/rbn_all"
            android:text="@string/all"
            android:layout_marginRight="1dp"
            style="@style/radiubutton_home" />
        <RadioButton
            android:id="@+id/rbn_activity"
            android:text="@string/activity"
            android:layout_marginRight="1dp"
            style="@style/radiubutton_home" />
        <RadioButton
            android:id="@+id/rbn_citywide"
            android:text="@string/citywide"
            android:layout_marginRight="1dp"
            style="@style/radiubutton_home" />
        <RadioButton
            android:id="@+id/rbn_ranking"
            android:text="@string/ranking"
            style="@style/radiubutton_home" />
    </RadioGroup>
    <include layout="@layout/item_distance"/>
</LinearLayout>