<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/page_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:background="@drawable/logo" />
    </RelativeLayout>

    <LinearLayout style="@style/edit_ll_style">

        <EditText
            android:id="@+id/et_phone"
            style="@style/edit_item_style"
            android:maxLength="11"
            android:inputType="numberDecimal"
            android:hint="@string/usernameHint" />
    </LinearLayout>

    <LinearLayout style="@style/edit_ll_style">

        <EditText
            android:id="@+id/et_code"
            style="@style/edit_item_style"
            android:hint="@string/writecodeHint" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:text="@string/getcode"
            android:textColor="@color/global" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/regist1"
            android:textColor="@color/hint" />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/regist2"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_next"
        style="@style/button_login_style"
        android:text="@string/next" />
</LinearLayout>