<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/page_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_launcher_transparent" />
    </RelativeLayout>

    <LinearLayout style="@style/edit_ll_style">

        <EditText
            android:id="@+id/et_phone"
            style="@style/edit_item_style"
            android:hint="@string/phoneHint"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="11" />
    </LinearLayout>

    <LinearLayout style="@style/edit_ll_style">

        <EditText
            android:id="@+id/et_code"
            style="@style/edit_item_style"
            android:hint="@string/codeHint" />

        <TextView
            android:id="@+id/tv_getcode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:text="@string/getcode"
            android:textColor="@color/global"
            android:textSize="@dimen/edit" />
    </LinearLayout>

    <LinearLayout style="@style/edit_ll_style">

        <EditText
            android:id="@+id/et_new_pwd"
            style="@style/edit_item_style"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
            android:hint="@string/newpwdHint"
            android:imeOptions="actionNext"
            android:maxLength="14"
            android:password="true"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout style="@style/edit_ll_style">

        <EditText
            android:id="@+id/et_re_pwd"
            style="@style/edit_item_style"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
            android:hint="@string/repwdHint"
            android:imeOptions="actionGo"
            android:maxLength="14"
            android:password="true"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_finish"
        style="@style/button_login_style"
        android:text="@string/finish" />
</LinearLayout>