<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/page_title" />

    <LinearLayout style="@style/edit_ll_style">

        <ImageView
            style="@style/edit_img_style"
            android:src="@drawable/login_user" />

        <EditText
            android:id="@+id/et_username"
            style="@style/edit_item_style"
            android:hint="@string/usernameHint" />
    </LinearLayout>

    <LinearLayout style="@style/edit_ll_style">

        <ImageView
            style="@style/edit_img_style"
            android:src="@drawable/login_passworld" />

        <EditText
            android:password="true"
            android:id="@+id/et_password"
            style="@style/edit_item_style"
            android:hint="@string/passworldHint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        style="@style/button_login_style"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_phone"
            android:text="@string/register"
            android:textColor="@color/hint" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_forget"
            android:drawablePadding="5dp"
            android:text="@string/forget"
            android:textColor="@color/hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/trilateral"
        android:textColor="@color/global"
        android:textSize="@dimen/edit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_qq"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/img_qq" />

        <ImageView
            android:id="@+id/iv_login_weixin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/img_weixin" />

        <ImageView
            android:id="@+id/iv_login_sizn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/img_sina" />
    </LinearLayout>
</LinearLayout>