<?xml version="1.0" encoding="utf-8"?>
<com.laichushu.book.ui.widget.ResizeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/page_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_launcher_transparent" />
            </RelativeLayout>

            <LinearLayout
                style="@style/edit_ll_style"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/name"
                    android:textColor="@color/edit" />

                <EditText
                    android:id="@+id/et_name"
                    style="@style/edit_item_style"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:hint="@string/fillin"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                style="@style/edit_ll_style"
                android:layout_width="352dp"
                android:gravity="center_vertical"
                android:singleLine="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/sex"
                    android:textColor="@color/edit" />

                <TextView
                    android:id="@+id/tv_sex"
                    style="@style/edit_item_style"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:hint="@string/select" />
            </LinearLayout>

            <LinearLayout
                style="@style/edit_ll_style"
                android:layout_width="352dp"
                android:gravity="center_vertical"
                android:singleLine="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/address"
                    android:textColor="@color/edit" />

                <TextView
                    android:id="@+id/tv_address"
                    style="@style/edit_item_style"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:hint="@string/select" />
            </LinearLayout>

            <LinearLayout
                style="@style/edit_ll_style"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:inputType="numberDecimal"
                    android:maxLength="11"
                    android:text="@string/phone"
                    android:textColor="@color/edit" />

                <TextView
                    android:id="@+id/tv_phone"
                    style="@style/edit_item_style"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:hint="@string/fillin"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                style="@style/edit_ll_style"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/pwd"
                    android:textColor="@color/edit" />

                <EditText
                    android:id="@+id/et_pwd"
                    style="@style/edit_item_style"
                    android:layout_marginRight="5dp"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
                    android:gravity="right"
                    android:hint="@string/fillin"
                    android:maxLength="14"
                    android:password="true"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                style="@style/edit_ll_style"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/repwd"
                    android:textColor="@color/edit" />

                <EditText
                    android:id="@+id/et_re_pwd"
                    style="@style/edit_item_style"
                    android:layout_marginRight="5dp"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
                    android:gravity="right"
                    android:hint="@string/fillin"
                    android:maxLength="14"
                    android:password="true"
                    android:singleLine="true" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_finish"
                style="@style/button_login_style"
                android:text="@string/finish" />
        </LinearLayout>
    </ScrollView>
</com.laichushu.book.ui.widget.ResizeLayout>